<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmrdv_common</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="akhandelwal2025@gmail.com">ankit</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>sbg_driver</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>eufs_msgs</exec_depend>
  <exec_depend>cmrdv_interfaces</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
