<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>movia</name>
  <version>1.0.0</version>
  <description>This package connects to an MOVIA sensor and converts them to ROS2 pointcloud messages</description>
  <maintainer email="info@microvision.eu">MicroVision GmbH</maintainer>
  <license>microvision</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_ros</depend>
  <depend>libpcl-all-dev</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
