<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perceptions</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="geoffthejetson@gmail.com">dale</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>eufs_msgs</build_depend>
  <exec_depend>eufs_msgs</exec_depend>
  <build_depend>ros2_numpy</build_depend>
  <build_depend>numpy</build_depend>
  <build_depend>pandas</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>ros2_numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
